# GenAI_assignment5

./: .gitignore  README.md  finetune_gpt2.py  pyproject.toml
app/: bigram_model.py  llm_model.py  main.py  main_old.py  rnn_model.py
